Bug 12605 - Suspend regression, hang after matroxfb
Summary: Suspend regression, hang after matroxfb
Status: CLOSED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Hibernation/Suspend (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: power-management_other
URL:
Keywords:
Depends on:
Blocks: 7216 12398
  Show dependency tree
 
Reported: 2009-02-01 14:56 UTC by Rafael J. Wysocki
Modified: 2009-02-08 12:46 UTC (History)
0 users

See Also:
Kernel Version: 2.6.29-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-02-01 14:56:33 UTC
Subject    : Suspend regression, hang after matroxfb
Submitter  : Eric Sesterhenn <snakebyte@gmx.de>
Date       : 2009-01-29 12:58
References : http://thread.gmane.org/gmane.linux.power-management.general/12640
Handled-By : "Rafael J. Wysocki" <rjw@sisk.pl>
Patch      : http://marc.info/?l=linux-kernel&m=123335902122029&w=4

This entry is being used for tracking a regression from 2.6.28.  Please don't
close it until the problem is fixed in the mainline.

Note You need to log in before you can comment on or make changes to this bug.